Bug 1684183 - stop replacing file extensions for zip, json and xml files, and add a pref in case further issues appear for the other document types. r=evilpie, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D100801